--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
                     <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
+        </div>              
     </header>
 
     <main>
