--- a/donasi.html
+++ b/donasi.html
@@ -23,6 +23,7 @@
                     <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
+        </div>
     </header>
 
     <!-- Bagian Konten -->
