--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
+        </div>            
     </header>
 
     <!-- Konten Utama -->
